Changes to dropdown Menu sort whitespace issues

--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,7 @@
         opacity: 1;
         transition: all 0.5s ease;
         z-index: 99;
-        height: 50vh;
+        height: 70vh;  /* Adjusts size of whitespace on dropdown menu */
         font-size: 1.6rem;
     }
     
